src/App.css
/* @font-face {
  font-family: "Francois One";
  src: URL("FrancoisOne-Regular.ttf") format("truetype");
} */

body {
  font-family: "Francois One", sans-serif;
  overflow: hidden;
  padding: 2px;
}

button {
  font-family: "Francois One", sans-serif;
}

a,
a:visited {
  text-decoration: none;
}

.welcome-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
  background: rgb(249, 160, 63);
  background: radial-gradient(
    circle,
    rgba(249, 160, 63, 1) 9%,
    rgba(248, 173, 157, 1) 68%,
    rgba(240, 128, 128, 1) 96%
  );
}

.welcome {
  color: white;
}

.get-started-btn {
  display: flex;
  justify-content: center;
  background-color: transparent;
  /* opacity: 0.8; */
  width: 100px;
  padding: 20px 100px 20px 100px;
  border: none;
  border-radius: 50%;
}

.get-started {
  color: white;
  font-size: 20px;
  white-space: nowrap;
}

.landing-container {
  display: flex;
  height: 95vh;
  flex-direction: column;
  /* justify-content: center; */
  /* margin-top: 15%; */
  align-items: center;
  align-content: space-between;
  padding: 50px 15px 0 15px;
  /* background-color: white; */
  background: rgb(249, 160, 63);
  background: radial-gradient(
    circle,
    rgba(249, 160, 63, 1) 9%,
    rgba(248, 173, 157, 1) 68%,
    rgba(240, 128, 128, 1) 96%
  );
}

.nav-bar {
  height: 70px;
  background-color: #f9a03f;
  width: 100%;
  align-self: flex-start;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.account-icon {
  margin-right: 5%;
}

.today-is {
  color: whitesmoke;
}

.goals-container,
.daily-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 5px solid #f9a03f;
  /* border-radius: 50%; */
  padding: 30px;
  width: 80%;
  margin: 15% 3% 0 3%;
  box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
  background-color: whitesmoke;
}

.add-btn {
  background-color: white;
  border: none;
  font-size: 50px;
}

